# Advocacy

./: docker-compose.yml  main.py  pyproject.toml  requirements.txt
123/: Home-1.css  Home-1.html  index.html  nicepage.css
123/blog/: blog.html  пост-1.html  пост-2.html  пост-3.html  пост-4.html  пост-5.html  пост.html
alembic/versions/: 245b525bd61d_init.py  261a6b0a2bc9_body_change_type_string_to_text.py  4154845b3624_body_change_type_string_to_text1.py  4bb0af9b183a_default.py  6542aa0700f3_body_change_type_string_to_text2.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: auth.py  content.py  upload_img.py  user.py
src/routes/: auth.py  content.py
src/routes/static/: edit_contact.js  singup.js
src/routes/templates/: index.html
src/static/css/: login.css  news.css  nicepage.css
src/static/js/: add_news.js  login.js
src/templates/: add_news.html  base.html  index.html  login.html  news.html
